[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://Transitions/TransitionTierOut.tscn" type="PackedScene" id=5]
[ext_resource path="res://Transitions/TransitionSlideOut.tscn" type="PackedScene" id=6]
[ext_resource path="res://Transitions/TransitionSlideIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Transitions/TransitionTierIn.tscn" type="PackedScene" id=8]
[ext_resource path="res://Transitions/Transitions.gd" type="Script" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Menu = ExtResource( 2 )
Game = ExtResource( 3 )
GameOver = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 15.9899, 9.03634 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenes" type="Node2D" parent="."]

[node name="Transitions" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource( 9 )

[node name="TransitionSlideIn" parent="Transitions" instance=ExtResource( 7 )]
visible = false

[node name="TransitionSlideOut" parent="Transitions" instance=ExtResource( 6 )]
visible = false

[node name="TransitionTierIn" parent="Transitions" instance=ExtResource( 8 )]
visible = false

[node name="TransitionTierOut" parent="Transitions" instance=ExtResource( 5 )]
visible = false
